# university-db-2

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
app/: CMakeLists.txt  Database.cpp  Database.hpp  Menu.hpp  PESELValidator.hpp  RecordGenerator.hpp  addrecordform.cpp  addrecordform.h  addrecordform.ui  main.cpp  mainwindow.cpp  mainwindow.h  showallform.cpp  showallform.h  showallform.ui  university-db-2.pro
src/app/: CMakeLists.txt  CMakeLists.txt.autosave  Database.cpp  Database.hpp  Employee.cpp  Employee.hpp  IDatabase.hpp  Menu.cpp  Menu.hpp  PESELValidator.cpp  PESELValidator.hpp  Person.cpp  Person.hpp  RecordGenerator.cpp  RecordGenerator.hpp  Student.cpp  Student.hpp  addrecordform.cpp  addrecordform.h  addrecordform.ui  findrecordbypeselform.cpp  findrecordbypeselform.h  findrecordbypeselform.ui  findrecordbysurnameform.cpp  findrecordbysurnameform.h  findrecordbysurnameform.ui  informationform.cpp  informationform.h  informationform.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modifysalaryinemployeerecordform.cpp  modifysalaryinemployeerecordform.h  modifysalaryinemployeerecordform.ui  recordgeneratorform.cpp  recordgeneratorform.h  recordgeneratorform.ui  removestudentrecordbyindexform.cpp  (+17 more)
src/content/: adresses.json  adresses.txt  femaleNames.json  femaleNames.txt  femaleSurnames.json  maleNames.json  maleNames.txt  maleSurnames.json  maleSurnames.txt
src/test/: CMakeLists.txt  DatabaseMock.hpp  DatabaseTest.cpp  MenuTest.cpp  PESELValidatorTest.cpp  RecordGeneratorTest.cpp
